--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-<script src="/app.js"></script>
+<script src="/webPush/app.js"></script>
 
 <script>
     // Initialize Firebase
