--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
     </div> 
 </body> -->
 
-<script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+
+<!-- git view -->
 <script src="/webPush/app.js"></script>
+<script src="/webPush/firebase.js"></script>
+
+<!-- local view -->
+<!--
+<script src="/firebase.js"></script>
+<script src="/app.js"></script>-->
 
 <script>
     // Initialize Firebase
