--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
         -->
 
 <button type="button" id="subscribe">Следить за изменениями</button>
+<button type="button" id="send">Отправить тестовое сообщение</button>
+
 
 </body>
